<resources>
    <string name="app_name">PokemonTracker</string>
    <string name="header">Pokemon Tracker</string>
    <string name="subheader">Register new catch!</string>
    <string name="nationalNumber">National Number</string>

    <string name="name">Name</string>
    <string name="species">Species</string>
    <string name="gender">Gender</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="level">Level</string>

    <string name="defaultNumber">896</string>
    <string name="defaultName">Glastrier</string>
    <string name="defaultSpecies">Wild Horse Pokemon</string>
    <string name="defaultGender">N/A</string>
    <string name="genderMale">Male</string>
    <string name="genderFemale">Female</string>
    <string name="defaultHeight">2.2m</string>
    <string name="defaultWeight">800.0kg</string>
    <string name="defaultLevel">N/A</string>
    <string name="defaultHP">0</string>
    <string name="defaultAttack">0</string>
    <string name="defaultDefense">0</string>


    <string name="stats">Base Stats</string>
    <string name="hp">HP</string>
    <string name="attack">Attack</string>
    <string name="defense">Defense</string>

    <string name="reset">Reset</string>
    <string name="save">Save</string>
    <string name="toggle">Toggle</string>
    <string name="saveCount">Saved entries: 0 </string>
    <string name="goBack">Back to Pokemon Form</string>

    <string name="viewPokemon">Pokemon List</string>
    <string name="deleted">Pokemon deleted</string>
    <string name="delete_failed">Failed to delete Pokemon</string>
    <string name="pokeList">Pokemon List</string>

</resources>