<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ivory"
    android:fillViewport="true">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:stretchColumns="1">

        <TableRow>
            <TextView
                android:id="@+id/header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/header"
                android:textColor="@color/red"
                android:textSize="24sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/subheader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subheader"
                android:textColor="@color/darkGrey"
                android:textSize="14sp" />
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/saveCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saveCount"
                android:textColor="@color/darkGrey"
                android:textSize="14sp" />
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/nationalNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nationalNumber"
                android:textColor="@color/blue"/>
            <EditText
                android:id="@+id/nationalInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="6"/>
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/blue"/>
            <EditText
                android:id="@+id/nameInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:ems="10"/>
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/species"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/species"
                android:textColor="@color/blue"/>
            <EditText
                android:id="@+id/speciesInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:ems="12"/>
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textColor="@color/blue"/>
            <RadioGroup
                android:id="@+id/genderGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:checkedButton="@id/genderUNK">
                <RadioButton
                    android:id="@+id/genderMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genderMale"/>
                <RadioButton
                    android:id="@+id/genderFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genderFemale"
                    android:layout_marginStart="8dp"/>
                <RadioButton
                    android:id="@+id/genderUNK"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/defaultGender"
                    android:layout_marginStart="8dp"/>
            </RadioGroup>
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height"
                android:textColor="@color/blue"/>
            <EditText
                android:id="@+id/heightInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="4"/>
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:textColor="@color/blue"/>
            <EditText
                android:id="@+id/weightInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="8"/>
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level"
                android:textColor="@color/blue"/>
        <Spinner
            android:id="@+id/levelSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/levels"
            android:spinnerMode="dropdown"
            android:dropDownHeight="249dp"/>
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/stats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stats"
                android:textColor="@color/darkRed"
                android:textSize="18sp"
                android:textStyle="bold"/>
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/hp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hp"
                android:textColor="@color/blue"/>
            <EditText
                android:id="@+id/hpInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="4"/>
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/attack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attack"
                android:textColor="@color/blue"/>
            <EditText
                android:id="@+id/attackInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="4"/>
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/defense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/defense"
                android:textColor="@color/blue"/>
            <EditText
                android:id="@+id/defenseInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="4"/>
        </TableRow>

        <TableRow>
            <LinearLayout
                android:id="@+id/rowButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="16dp">
                <Button
                    android:id="@+id/reset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reset"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/blue"/>
                <Button
                    android:id="@+id/save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/red"
                    android:layout_marginStart="16dp"/>
                <Button
                    android:id="@+id/toggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/toggle"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/darkRed"
                    android:layout_marginStart="16dp"/>
            </LinearLayout>

        </TableRow>

    </TableLayout>

</ScrollView>

