<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textNational"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nationalNumber"/>

    <TextView
        android:id="@+id/textName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textSpecies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/species" />

</LinearLayout>