<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideInputs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="150dp"/>

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding='8dp'/>

    <TextView
        android:id="@+id/subheader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subheader"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/nationalNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nationalNumber"
        android:textSize="18sp"
        android:layout_marginTop="32dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subheader"
        app:layout_constraintEnd_toStartOf="@+id/guideInputs"/>

    <EditText
        android:id="@+id/nationalInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:importantForAutofill="yes"
        android:textSize="18sp"
        android:paddingVertical="12dp"
        android:backgroundTint="@color/black"
        app:layout_constraintStart_toEndOf="@+id/guideInputs"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/nationalNumber"/>


</androidx.constraintlayout.widget.ConstraintLayout>